# AI-Powered-DB-Agent

./: .gitignore  README.md  db.py  main.py  models.py  officedb.sql  pyproject.toml  query_validator.py  sql_generator.py  validator.py
